Button contrast fix and function update
The coloured buttons are modified to be more legible and comfortable. Also, the sticky function of the author frame is extended, although the support of such function remains limited to FireFox.

--- a/LTT_New_Dark_Theme_hotfix.css
+++ b/LTT_New_Dark_Theme_hotfix.css
@@ -123,6 +123,14 @@
    background-color: rgba(0, 0, 0, 0.2);
 }
 
+.author_info {
+   position: sticky;
+   position: -webkit-sticky;
+   position: -moz-sticky;
+   position: -o-sticky;
+   position: -ms-sticky;
+}
+
 .author_info .row2, .author_info .post_block.row2 {
    background-color: transparent;
 }
@@ -242,6 +250,14 @@ a:hover.paper-button.raised {
 #participants_list .ipsUserPhoto_mini {
    width: 42px;
    height: 42px;
+}
+
+.ipsButton_secondary span[style="color:red"] {
+   color: #ff4818 !important;
+}
+
+.ipsButton_secondary span[style="color:green"] {
+   color: #00a820 !important;
 }
 
 .ipsBadge_green {
